--- a/ruff.toml
+++ b/ruff.toml
@@ -1,5 +1,5 @@
 # Exclude a variety of commonly ignored directories.
-exclude = [
+exclude=[
     ".bzr",
     ".direnv",
     ".eggs",
@@ -29,48 +29,53 @@ exclude = [
 ]
 
 # Same as Black.
-line-length = 88
-indent-width = 4
+indent-width=4
+line-length=88
 
-target-version = "py312"
+target-version="py312"
 
 [lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F", "B", "SIM", "I"]
-ignore = ["F722", "F821"]                         # ! Jaxtyping ignore unkown variables in type hints
+    # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+    # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+    # McCabe complexity (`C901`) by default.
+    ignore=[
+        "E741",
+        "E743",
+        "F722",
+        "F821",
+    ] # ! Jaxtyping ignore unkown variables in type hints + allow variable name "I"
+    select=["B", "E4", "E7", "E9", "F", "I", "SIM"]
 
-# Allow fix for all enabled rules (when `--fix`) is provided.
-fixable = ["ALL"]
-unfixable = []
+    # Allow fix for all enabled rules (when `--fix`) is provided.
+    fixable=["ALL"]
+    unfixable=[]
 
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+    # Allow unused variables when underscore-prefixed.
+    dummy-variable-rgx="^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [format]
-# Like Black, use double quotes for strings.
-quote-style = "double"
+    # Like Black, use double quotes for strings.
+    quote-style="double"
 
-# Like Black, indent with spaces, rather than tabs.
-indent-style = "space"
+    # Like Black, indent with spaces, rather than tabs.
+    indent-style="space"
 
-# Like Black, respect magic trailing commas.
-skip-magic-trailing-comma = false
+    # Like Black, respect magic trailing commas.
+    skip-magic-trailing-comma=false
 
-# Like Black, automatically detect the appropriate line ending.
-line-ending = "auto"
+    # Like Black, automatically detect the appropriate line ending.
+    line-ending="auto"
 
-# Enable auto-formatting of code examples in docstrings. Markdown,
-# reStructuredText code/literal blocks and doctests are all supported.
-#
-# This is currently disabled by default, but it is planned for this
-# to be opt-out in the future.
-docstring-code-format = false
+    # Enable auto-formatting of code examples in docstrings. Markdown,
+    # reStructuredText code/literal blocks and doctests are all supported.
+    #
+    # This is currently disabled by default, but it is planned for this
+    # to be opt-out in the future.
+    docstring-code-format=false
 
-# Set the line length limit used when formatting code snippets in
-# docstrings.
-#
-# This only has an effect when the `docstring-code-format` setting is
-# enabled.
-docstring-code-line-length = "dynamic"
+    # Set the line length limit used when formatting code snippets in
+    # docstrings.
+    #
+    # This only has an effect when the `docstring-code-format` setting is
+    # enabled.
+    docstring-code-line-length="dynamic"
